--- a/landing-page/src/App.css
+++ b/landing-page/src/App.css
@@ -11,7 +11,7 @@
   position: relative;
   left: 0px;
   top: 0px;
-  padding: 120px 0 0 70px;
+  padding: 100px 0 0 70px;
   box-sizing: border-box;
   width: 100%;
   height: 937px;
@@ -95,7 +95,7 @@
   transition: 1000ms;
   height: 100%;
   background-image: -webkit-linear-gradient(-40deg, #41478f 35%, #c1445a);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 #main-link-openCloseBtn {
@@ -105,7 +105,7 @@
   align-items: center;
   color: #fff;
 
-  position: relative;
+  position: absolute;
   top: 40%;
   left: -50px;
   width: 100px;
@@ -113,6 +113,7 @@
   background: #27272f;
   box-shadow: 0px 15px 15px rgb(0 0 0 / 15%);
   cursor: pointer;
+  /* z-index: 10; */
 }
 
 #openCloseTop {
@@ -148,16 +149,17 @@
   transform: rotate(-35deg);
   transition: all 300ms;
 }
-/* 
-#main-link-menu-wrap {
-  width: 100%;
-  overflow: hidden;
-} */
 
-#main-link-menu-text {
+#main-link-menu-wrap {
+  width: 87%;
+  display: flex;
+  overflow-x: hidden;
   position: absolute;
   top: 30%;
-  left: 100px;
+  left: 150px;
+}
+
+#main-link-menu-text {
   overflow: hidden;
   animation: fadeIn 4s;
   transition: all 1s;
@@ -166,10 +168,11 @@
   font-size: 80px;
   font-weight: 400;
   color: #fff;
+  transition: font-size 1000ms;
 }
 
 .main-link-menu-text-subscription {
-  font-size: 50px;
+  font-size: 47px;
   font-weight: 200;
   color: #fff;
   width: 500px;
@@ -177,18 +180,17 @@
 }
 
 #main-link-menus {
-  /* display: flex; */
+  display: flex;
   flex-direction: column;
   overflow-x: hidden;
-  position: absolute;
-  left: 45%;
-  top: 30%;
-  /* width: 700px; */
+  position: relative;
+  left: 30px;
 }
 
 .main-link-menu-top {
   display: flex;
   overflow-x: hidden;
+  margin-bottom: 10px;
 }
 
 .main-link-menu-bottom {
@@ -203,8 +205,8 @@
   align-items: center;
   height: 100px;
   width: 100px;
-  margin-right: 30px;
-  margin-bottom: 50px;
+  margin-right: 20px;
+  /* margin-bottom: 50px; */
 }
 
 .main-link-menu > img {
@@ -1551,6 +1553,22 @@ li {
   #container-wrap {
     padding: 0px;
   }
+  #header-menus {
+    display: none;
+  }
+
+  #main-link-menu-wrap {
+    width: 90%;
+    left: 100px;
+  }
+
+  .main-link-menu-text-title {
+    font-size: 70px;
+  }
+  .main-link-menu-text-subscription {
+    font-size: 40px;
+    width: 400px;
+  }
 }
 
 @media (max-width: 1400px) {
@@ -1558,9 +1576,64 @@ li {
     width: 322px;
   }
 
+  #main-link-menu-wrap {
+    width: 90%;
+    left: 100px;
+  }
+
+  #main-link-menus {
+    left: 25px;
+  }
+
   #main-link {
     margin-top: 100px;
     height: 89%;
+  }
+  .main-link-menu-top {
+    margin-bottom: 5px;
+  }
+
+  .main-link-menu {
+    width: 90px;
+    height: 90px;
+    margin-right: 15px;
+    /* margin-bottom: 50px; */
+  }
+  .main-link-menu-text-title {
+    font-size: 65px;
+  }
+  .main-link-menu-text-subscription {
+    font-size: 35px;
+    width: 400px;
+  }
+
+  .header-text {
+    color: black;
+  }
+
+  #header-language-now {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.678);
+  }
+  #login-img {
+    background-position-y: -67px;
+    background-position-x: -196px;
+  }
+
+  #join-img {
+    background-position-y: -67px;
+    background-position-x: -222px;
+  }
+
+  #header-language-arrow {
+    border-top: 4px solid #000;
+  }
+  #header-language-option {
+    border-left: 1px;
+    border-right: 1px;
+    border-bottom: 1px;
+    border-top: 0px;
+    border-style: solid;
+    border-color: #000;
   }
 }
 
@@ -1584,11 +1657,60 @@ li {
   #footer-sns {
     bottom: 20px;
   }
+
   #main-video {
     display: none;
   }
+
+  #main-link-menu-wrap {
+    width: 90%;
+    left: 90px;
+  }
+
   #main-link-openCloseBtn {
     display: none;
+  }
+  .main-link-menu-text-title {
+    font-size: 60px;
+  }
+  .main-link-menu-text-subscription {
+    font-size: 30px;
+    width: 300px;
+  }
+
+  .main-link-menu-top {
+    margin-bottom: 5px;
+  }
+
+  #main-link-menus {
+    left: 80px;
+  }
+  .main-link-menu {
+    width: 90px;
+    height: 90px;
+    margin-right: 10px;
+    margin-bottom: 0px;
+  }
+  .main-link-menu > img {
+    width: 50px;
+    height: 50px;
+  }
+  .main-link-menu > div {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 1100px) {
+  #main-link-menu-wrap {
+    flex-direction: column;
+    width: 70%;
+    height: 80%;
+    top: 10%;
+  }
+
+  #main-link-menus {
+    top: 20px;
+    left: -20px;
   }
 }
 
