--- a/landing-page/src/source/main/main.css
+++ b/landing-page/src/source/main/main.css
@@ -90,6 +90,17 @@
   /* overflow: hidden; */
 }
 
+#main-link-active {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 80%;
+  transition: 1000ms;
+  height: 100%;
+  background-image: -webkit-linear-gradient(-40deg, #41478f 35%, #c1445a);
+  /* overflow: hidden; */
+}
+
 #main-link-openCloseBtn {
   display: flex;
   flex-direction: column;
@@ -143,12 +154,13 @@
 }
 
 #main-link-menu-wrap {
-  width: 87%;
+  /* width: 87%; */
   display: flex;
   overflow-x: hidden;
   position: absolute;
   top: 30%;
   left: 150px;
+  overflow: hidden;
 }
 
 #main-link-menu-text {
@@ -164,19 +176,42 @@
 }
 
 .main-link-menu-text-subscription {
-  font-size: 47px;
-  font-weight: 200;
+  position: absolute;
+  visibility: hidden;
   color: #fff;
-  width: 500px;
+  font-size: 40px;
+  font-weight: 200;
+  width: 400px;
   word-break: keep-all;
 }
 
-#main-link-menus {
+.main-link-menu-text-subscription-active {
+  font-size: 40px;
+  font-weight: 200;
+  color: #fff;
+  width: 400px;
+  word-break: keep-all;
+  /* z-index: 10; */
+}
+
+#main-link-menus-active {
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
   position: relative;
-  left: 30px;
+  clip-path: inset(0 0 0 0);
+  transition: all 1s;
+  left: 10px;
+}
+
+#main-link-menus {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  overflow-x: hidden;
+  clip-path: inset(0 100% 0 0);
+  /* transition: all 1s; */
+  left: 10px;
 }
 
 .main-link-menu-top {
@@ -235,27 +270,32 @@
 
 @media (max-width: 1580px) {
   #main-link-menu-wrap {
-    width: 90%;
+    /* width: 90%; */
     left: 100px;
   }
 
+  #main-link-menus,
+  #main-link-menus-active {
+    left: -30px;
+  }
   .main-link-menu-text-title {
     font-size: 70px;
   }
-  .main-link-menu-text-subscription {
-    font-size: 40px;
-    width: 400px;
+  .main-link-menu-text-subscription-active {
+    font-size: 37px;
+    width: 370px;
   }
 }
 
 @media (max-width: 1400px) {
   #main-link-menu-wrap {
-    width: 90%;
-    left: 100px;
+    /* width: 10%; */
+    left: 80px;
   }
 
-  #main-link-menus {
-    left: 25px;
+  #main-link-menus,
+  #main-link-menus-active {
+    left: -50px;
   }
 
   #main-link {
@@ -267,23 +307,32 @@
   }
 
   .main-link-menu {
-    width: 90px;
-    height: 90px;
+    width: 100px;
+    height: 100px;
     margin-right: 15px;
     /* margin-bottom: 50px; */
   }
   .main-link-menu-text-title {
     font-size: 65px;
   }
-  .main-link-menu-text-subscription {
-    font-size: 35px;
-    width: 400px;
+  .main-link-menu-text-subscription-active {
+    font-size: 30px;
+    width: 310px;
+  }
+
+  .main-link-menu > div {
+    font-size: 14px;
   }
 }
 
 @media (max-width: 1200px) {
   #main-video {
     display: none;
+  }
+
+  #main-link-active,
+  #main-link {
+    width: calc(100% - 67px);
   }
 
   #main-link-menu-wrap {
@@ -297,7 +346,7 @@
   .main-link-menu-text-title {
     font-size: 60px;
   }
-  .main-link-menu-text-subscription {
+  .main-link-menu-text-subscription-active {
     font-size: 30px;
     width: 300px;
   }
@@ -306,21 +355,30 @@
     margin-bottom: 5px;
   }
 
-  #main-link-menus {
-    left: 80px;
-  }
   .main-link-menu {
     width: 90px;
     height: 90px;
     margin-right: 10px;
     margin-bottom: 0px;
   }
+
+  #main-link-menus {
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    position: relative;
+    clip-path: inset(0 0 0 0);
+    transition: all 1s;
+    left: 80px;
+  }
+
+  #main-link-menus-active {
+    left: 80px;
+  }
+
   .main-link-menu > img {
     width: 50px;
     height: 50px;
-  }
-  .main-link-menu > div {
-    font-size: 15px;
   }
 }
 
@@ -329,10 +387,11 @@
     flex-direction: column;
     width: 70%;
     height: 80%;
-    top: 10%;
+    top: 20%;
   }
 
-  #main-link-menus {
+  #main-link-menus,
+  #main-link-menus-active {
     top: 20px;
     left: -20px;
   }
