--- a/landing-page/src/source/header/header.css
+++ b/landing-page/src/source/header/header.css
@@ -20,6 +20,97 @@
   /* flex: 1; */
 }
 
+#header-logo-active {
+  position: absolute;
+  left: 70px;
+  background: url(../../images/logo_w.svg) no-repeat 50% 0;
+  background-size: 190px 36px;
+  height: 80px;
+  width: 190px;
+  z-index: 90;
+  /* flex: 1; */
+}
+
+button {
+  border: 0;
+}
+
+/* header-menubtn */
+
+#header-menuBtn,
+#header-menuBtn-active {
+  display: none;
+  position: absolute;
+  top: 50px;
+  left: 300px;
+  /* z-index: 91; */
+  width: 34px;
+  height: 24px;
+  background: transparent;
+  font-size: 0px;
+  transition: all 0.3s ease 0s;
+  z-index: 90;
+}
+
+#header-menuBtn > i {
+  display: block;
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  background: #151515;
+}
+
+#header-menuBtn > i:nth-of-type(1) {
+  top: 0px;
+  transition: all 0.3s ease;
+  transition-property: top, transform;
+  transition-delay: 0.3s, 0s;
+}
+
+#header-menuBtn > i:nth-of-type(2) {
+  top: 50%;
+  margin-top: -1px;
+  transition: background 0.3s ease 0s;
+}
+
+#header-menuBtn > i:nth-of-type(3) {
+  top: 22px;
+  transition: all 0.3s ease;
+  transition-property: top, transform;
+  transition-delay: 0.3s, 0s;
+}
+
+/* header-menu-active */
+#header-menuBtn-active > i {
+  display: block;
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+}
+
+#header-menuBtn-active > i:nth-of-type(1) {
+  top: 10px;
+  transform: rotate(-45deg);
+  transition: all 0.3s ease;
+  transition-property: transform, top;
+  transition-delay: 0.3s, 0s;
+}
+
+#header-menuBtn-active > i:nth-of-type(2) {
+  display: none;
+}
+
+#header-menuBtn-active > i:nth-of-type(3) {
+  top: 10px;
+  transform: rotate(45deg);
+  transition: all 0.3s ease;
+  transition-property: transform, top;
+  transition-delay: 0.3s, 0s;
+}
+
 /* header-menus */
 #header-menus {
   display: flex;
@@ -177,32 +268,111 @@
   transition: all 300ms ease;
 }
 
-/* sub-menu-dokdoVideo:hover */
+/* header-menu-active */
 
-/* .sub-menu:hover {
-    cursor: pointer;
-    color: #fee728;
-    text-decoration: underline;
-    transition: all 300ms ease;
-  }
-  
-  .sub-menu:hover .sub-menu-arrowDown {
-    border-left: 4px solid #fee728;
-    transition: all 300ms ease;
-  }
-  
-  .sub-menu:hover #dokdoVideo {
-    visibility: visible;
-    opacity: 1;
-    left: 155px;
-    transition: all 300ms ease;
-  } */
+#header-menus-active-wrap {
+  overflow: auto;
+  opacity: 0;
+  position: fixed;
+  left: 0;
+  top: 0px !important;
+  z-index: 89;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding-bottom: 50px;
+  background: #41478f;
+  background-image: linear-gradient(-40deg, #41478f 35%, #c1445a);
+  background-image: -ms-linear-gradient(-40deg, #41478f 35%, #c1445a);
+  background-image: -webkit-linear-gradient(-40deg, #41478f 35%, #c1445a);
+  background-image: -moz-linear-gradient(-40deg, #41478f 35%, #c1445a);
+  background-image: -o-linear-gradient(-40deg, #41478f 35%, #c1445a);
+  transition: all 500ms cubic-bezier(0.16, 0.35, 0.46, 0.99);
+}
 
-/* #dokdoVideo > li:hover {
-    color: #41478f;
-    text-decoration: underline;
-    transition: all 300ms ease;
-  } */
+#header-menus-active {
+  /* display: inline-block; */
+  /* position: absolute; */
+  /* float: left; */
+  width: calc(100% - 70px);
+  height: calc(100% - 190px);
+  box-sizing: border-box;
+  padding-top: 80px;
+  margin: 100px auto 70px;
+}
+
+.header-menu-active {
+  float: left;
+  width: calc(100% / 6);
+  box-sizing: border-box;
+  padding: 0 30px;
+}
+
+.header-menu-active > div {
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.header-sub-menu-active {
+  padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+.sub-menu-active {
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.sub-menu-title-active {
+  color: white;
+  display: flex;
+}
+
+.sub-menu-sub-menu-active {
+  display: block;
+  color: white;
+  font-size: 14px;
+  background: rgba(255, 255, 255, 0.1);
+  transition: all 300ms;
+}
+
+.sub-menu-sub-menu-active > li {
+  padding: 10px 10px;
+}
+
+.sub-menu-title-active {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.sub-menu-addBtn-active {
+  top: 5px;
+  right: 0px;
+  width: 10px;
+  height: 10px;
+  position: relative;
+}
+
+.sub-menu-vetical-active {
+  position: absolute;
+  left: 50%;
+  background-color: white;
+  width: 1px;
+  height: 100%;
+}
+
+.sub-menu-horizontal-active {
+  position: absolute;
+  top: 50%;
+  background-color: white;
+  height: 1px;
+  width: 100%;
+}
 
 /* header-utils */
 #header-utils {
@@ -212,6 +382,7 @@
   right: 3%;
   width: 350px;
   color: white;
+  z-index: 90;
 }
 
 #header-login {
@@ -223,7 +394,8 @@
   font-size: 14px;
 }
 
-#login-img {
+#login-img,
+#login-img-active {
   position: relative;
   top: -2px;
   left: -10px;
@@ -247,7 +419,8 @@
   font-size: 14px;
 }
 
-#join-img {
+#join-img,
+#join-img-active {
   position: relative;
   top: -2px;
   left: -10px;
@@ -259,7 +432,8 @@
   background-position-x: -222px;
 }
 
-#header-language-now {
+#header-language-now,
+#header-language-now-active {
   width: 120px;
   display: flex;
   position: relative;
@@ -274,7 +448,8 @@
   cursor: pointer;
 }
 
-#header-language-option {
+#header-language-option,
+#header-language-option-active {
   display: flex;
   width: 120px;
   /* height: 0px; */
@@ -290,7 +465,8 @@
   /* cursor: pointer; */
 }
 
-#header-language-arrow {
+#header-language-arrow,
+#header-language-arrow-active {
   position: absolute;
   top: 8px;
   right: 7px;
@@ -313,6 +489,10 @@
 @media (max-width: 1580px) {
   #header-menus {
     display: none;
+  }
+  #header-menuBtn,
+  #header-menuBtn-active {
+    display: block;
   }
 }
 
@@ -344,5 +524,13 @@
     border-top: 0px;
     border-style: solid;
     border-color: #000;
+  }
+}
+
+@media (max-width: 1400px) {
+  #header-menuBtn,
+  #header-menuBtn-active {
+    top: 50px;
+    left: 19px;
   }
 }
