--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,6 +3,7 @@
 #header {
   position: absolute;
   display: flex;
+  /* justify-content: space-between; */
   padding: 46px 0px 0px 0px;
   width: 100%;
   height: 120px;
@@ -294,6 +295,9 @@ button {
   /* display: inline-block; */
   /* position: absolute; */
   /* float: left; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: calc(100% - 70px);
   height: calc(100% - 190px);
   box-sizing: border-box;
@@ -303,7 +307,8 @@ button {
 
 .header-menu-active {
   float: left;
-  width: calc(100% / 6);
+  /* width: calc(100% / 6); */
+  width: 220px;
   box-sizing: border-box;
   padding: 0 30px;
 }
@@ -376,13 +381,18 @@ button {
 
 /* header-utils */
 #header-utils {
+  float: right;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   position: absolute;
-  right: 3%;
-  width: 350px;
+  right: 0px;
+  /* width: 350px; */
   color: white;
   z-index: 90;
+}
+
+#header-utils > div {
+  margin-right: 30px;
 }
 
 #header-login {
@@ -532,5 +542,12 @@ button {
   #header-menuBtn-active {
     top: 50px;
     left: 19px;
+  }
+}
+
+@media (max-width: 1100px) {
+  #header-login,
+  #header-join {
+    display: none;
   }
 }
