--- a/src/components/container_/container_notice/container_notice.css
+++ b/src/components/container_/container_notice/container_notice.css
@@ -35,7 +35,7 @@
 #notice-head {
   position: relative;
   display: flex;
-  width: 23%;
+  width: 30%;
   left: 10px;
 }
 
@@ -98,9 +98,9 @@
 }
 
 #notice-head-contents-title {
-  position: relative;
+  position: absolute;
   top: 80px;
-  right: 0px;
+  right: 0;
 
   display: flex;
   flex-direction: column;
@@ -110,7 +110,7 @@
   line-height: 50px;
   /* text-align: center; */
   position: relative;
-  left: 0px;
+  /* left: 0px; */
   width: 120px;
   height: 50px;
   margin-bottom: 20px;
@@ -177,11 +177,11 @@
   }
 }
 
-@media (max-width: 1400px) {
+/* @media (max-width: 1400px) {
   #notice-head {
     width: 322px;
   }
-}
+} */
 
 @media (max-width: 1025px) {
   .notice-contents {
@@ -211,7 +211,7 @@
   }
 }
 
-@media (max-width: 630px) {
+@media (max-width: 800px) {
   #notice-head-introduce {
     display: none;
   }
