--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -11,6 +11,13 @@
   z-index: 80;
 }
 
+#header-menu-wrap {
+  /* position: sticky; */
+  width: 100%;
+  height: 100px;
+  /* z-index: 100; */
+}
+
 #header-logo {
   position: absolute;
   left: 70px;
@@ -40,11 +47,9 @@ button {
 
 #header-menuBtn,
 #header-menuBtn-active {
-  display: none;
+  display: block;
   position: absolute;
-  /* top: 50px; */
   left: 300px;
-  /* z-index: 91; */
   width: 34px;
   height: 24px;
   background: transparent;
@@ -124,10 +129,6 @@ button {
   /* color: #333; */
   /* font-weight: 400; */
 }
-
-/* .header-menu {
-    display: flex;
-  } */
 
 .header-menu {
   position: relative;
@@ -391,6 +392,171 @@ button {
   transition: all 300ms;
 }
 
+/* header */
+
+#header-logo-active {
+  position: absolute;
+  left: 70px;
+  background: url(../../images/logo_w.svg) no-repeat 50% 0;
+  background-size: 190px 36px;
+  height: 36px;
+  width: 190px;
+  z-index: 90;
+  /* flex: 1; */
+}
+
+/* header-menu-active */
+#header-menuBtn-active > i {
+  display: block;
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+}
+
+#header-menuBtn-active > i:nth-of-type(1) {
+  top: 10px;
+  transform: rotate(-45deg);
+  transition: all 0.3s ease;
+  transition-property: transform, top;
+  transition-delay: 0.3s, 0s;
+}
+
+#header-menuBtn-active > i:nth-of-type(2) {
+  display: none;
+}
+
+#header-menuBtn-active > i:nth-of-type(3) {
+  top: 10px;
+  transform: rotate(45deg);
+  transition: all 0.3s ease;
+  transition-property: transform, top;
+  transition-delay: 0.3s, 0s;
+}
+
+/* header-menu-active */
+
+#header-menus-active-wrap {
+  overflow: hidden;
+  opacity: 0;
+  position: fixed;
+  left: 0;
+  top: 0px !important;
+  z-index: 89;
+  width: 100%;
+  height: 1000px;
+  box-sizing: border-box;
+  padding-bottom: 50px;
+  background: #41478f;
+  background-image: linear-gradient(-40deg, #41478f 35%, #c1445a);
+  background-image: -ms-linear-gradient(-40deg, #41478f 35%, #c1445a);
+  background-image: -webkit-linear-gradient(-40deg, #41478f 35%, #c1445a);
+  background-image: -moz-linear-gradient(-40deg, #41478f 35%, #c1445a);
+  background-image: -o-linear-gradient(-40deg, #41478f 35%, #c1445a);
+  transition: all 500ms cubic-bezier(0.16, 0.35, 0.46, 0.99);
+}
+
+#header-menus-active {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: calc(100% - 70px);
+  /* height: calc(100% - 190px); */
+  height: 70%;
+  overflow-y: scroll;
+  box-sizing: border-box;
+
+  /* padding-top: 80px; */
+  margin: 150px auto 0;
+}
+
+#header-menus-active::-webkit-scrollbar {
+  width: 5px;
+}
+
+#header-menus-active::-webkit-scrollbar-thumb {
+  background-color: #a8a8a8;
+}
+
+#header-menus-active::-webkit-scrollbar-track {
+  background-color: #707070;
+}
+
+.header-menu-active {
+  float: left;
+  /* width: calc(100% / 6); */
+  width: 220px;
+  box-sizing: border-box;
+  padding: 0 30px;
+}
+
+.header-menu-active > div {
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.header-sub-menu-active {
+  padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+.sub-menu-active {
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.sub-menu-title-active {
+  color: white;
+  display: flex;
+}
+
+.sub-menu-sub-menu-active {
+  display: block;
+  color: white;
+  font-size: 14px;
+  background: rgba(255, 255, 255, 0.1);
+  transition: all 300ms;
+}
+
+.sub-menu-sub-menu-active > li {
+  padding: 10px 10px;
+}
+
+.sub-menu-title-active {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.sub-menu-addBtn-active {
+  top: 5px;
+  right: 0px;
+  width: 10px;
+  height: 10px;
+  position: relative;
+}
+
+.sub-menu-vetical-active {
+  position: absolute;
+  left: 50%;
+  background-color: white;
+  width: 1px;
+  height: 100%;
+}
+
+.sub-menu-horizontal-active {
+  position: absolute;
+  top: 50%;
+  background-color: white;
+  height: 1px;
+  width: 100%;
+}
+
 @media (max-width: 1580px) {
   #header-menus {
     display: none;
@@ -460,7 +626,8 @@ button {
     padding: 20px 0 0 0;
   }
 
-  #header-languages {
+  #header-languages,
+  #header-languages-active {
     display: none;
   }
 }
